modify: cuti report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ server.error.include-message=always
 #server.port=8088
 
 #JMS
+email.to=tumbalku00000@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=cutibahteramas@gmail.com
